# LogicWeaver

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  TECH_ROADMAP.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.kiro/hooks/: code-quality-analyzer.kiro.hook  sync-docs-on-change.kiro.hook
.kiro/specs/universal-sop-architect/: design.md  requirements.md  tasks.md
.kiro/steering/: rules.md
backend/: alembic.ini  check_db.py  diagnose.py  export_openapi.py  requirements.txt  test_init.py
backend/alembic/: env.py
backend/alembic/versions/: afc6c85d43ae_initial_schema.py  b2d4e6f8a0c2_add_tasks_and_notes.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  base.py  workflow.py
backend/app/repositories/: __init__.py  example.py  step.py  workflow.py
backend/app/routers/: __init__.py  analysis.py  example.py  file.py  note.py  protocol.py  status.py  step.py  step_simple.py  task.py  template.py  workflow.py
backend/app/schemas/: __init__.py  base.py  protocol.py  workflow.py
backend/app/services/: __init__.py  ai_analysis.py  example.py  file.py  llm.py  note.py  protocol.py  status.py  step.py  task.py  (+2 more)
backend/tests/: __init__.py  conftest.py  test_analysis_api.py  test_example_api.py  test_file_api.py  test_health.py  test_protocol_api.py  test_schemas.py  test_step_api.py  test_workflow_api.py
frontend/: .env.example  index.html  openapi.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
(+60 files in other folders)
